[gd_scene load_steps=2 format=3 uid="uid://d1cc83hsstqcl"]

[ext_resource type="Script" path="res://field/encounters/zones/encounter_zone.gd" id="1_tn44k"]

[node name="EncounterZone" type="Node2D"]
script = ExtResource("1_tn44k")

[node name="StartPosition" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-8, -8)

[node name="EndPosition" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(232, 232)
